--- a/ConcurrencyAndDistribution_CLIENT/properties/config.properties
+++ b/ConcurrencyAndDistribution_CLIENT/properties/config.properties
@@ -12,8 +12,7 @@ pathEllucianReadExcel		=.//excel//manage_issue_template.xls
 
 
 #CONSTANTS ##########################################################
-BANNER_MODULE_ENUM			=zzz
-SOLUTION_CENTER_ENUM		=yyy
-FILE_EXTENSION_ENUM			=xxx
-
+NAME_ZZZ			=zzz
+NAME_YYY			=yyy
+NAME_ZZZ			=xxx
 
